--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             storyContent = storyContent.replace(/ADJECTIVE/g, () => chooseRandom(adjectives));
             storyContent = storyContent.replace(/ADVERB/g, () => chooseRandom(adverbs));
             storyContent = storyContent.replace(/VERB/g, () => chooseRandom(verbs));
-            
+
 
             document.querySelector('#rendered-story').innerHTML = storyContent;
         }
@@ -60,10 +60,10 @@
 
     <!-- Feel free to add your own stories! -->
     <div class="story">
-        The ADJECTIVE NOUN VERBs over the ADJECTIVE NOUN.
+        The ADJECTIVE and ADJECTIVE NOUN VERBs over the ADJECTIVE NOUN.
     </div>
     <div class="story">
-        NOUN and NOUN VERB togther ADVERB and in peace, for such is their nature.
+        ADJECTIVE NOUN and ADJECTIVE NOUN VERB togther ADVERB and in peace, for such is their nature.
     </div>
 
     <script>
