--- a/index.html
+++ b/index.html
@@ -65,7 +65,9 @@
     <div class="story">
         ADJECTIVE NOUN and ADJECTIVE NOUN VERB togther ADVERB and in peace, for such is their nature.
     </div>
-
+    <div class="story">
+      Is NOUN ADJECTIVE if NOUN VERBs with NOUN? Maybe, if NOUN and ADJECTIVE NOUN kills the BIGNOUN
+    </div>
     <script>
         // When the button is clicked, run the `renderStory` function
         const button = document.querySelector('button');
