--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         ADJECTIVE NOUN and ADJECTIVE NOUN VERB togther ADVERB and in peace, for such is their nature.
     </div>
     <div class="story">
-      Is NOUN ADJECTIVE if NOUN VERBs with NOUN? Maybe, if NOUN and ADJECTIVE NOUN kills the BIGNOUN
+      Is NOUN ADJECTIVE if NOUN VERBs with NOUN? Maybe, if NOUN and ADJECTIVE NOUN renounces the big bad NOUN
     </div>
     <script>
         // When the button is clicked, run the `renderStory` function
